// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`next-eslint-config-project > next-eslint-config-project 1`] = `
{
  "config": {
    "$schema": "./node_modules/oxlint/configuration_schema.json",
    "categories": {
      "correctness": "off",
    },
    "env": {
      "builtin": true,
    },
    "ignorePatterns": [
      ".next/**",
      "out/**",
      "build/**",
      "next-env.d.ts",
    ],
    "overrides": [
      {
        "env": {
          "browser": true,
          "node": true,
        },
        "files": [
          "**/*.{js,jsx,mjs,ts,tsx,mts,cts}",
        ],
        "globals": {
          "AudioWorkletGlobalScope": "readonly",
          "AudioWorkletProcessor": "readonly",
          "WorkletGlobalScope": "readonly",
          "currentFrame": "readonly",
          "currentTime": "readonly",
          "registerProcessor": "readonly",
          "sampleRate": "readonly",
        },
        "plugins": [
          "react",
          "nextjs",
          "import",
          "jsx-a11y",
        ],
        "rules": {
          "import/no-anonymous-default-export": "warn",
          "jsx-a11y/alt-text": [
            "warn",
            {
              "elements": [
                "img",
              ],
              "img": [
                "Image",
              ],
            },
          ],
          "jsx-a11y/aria-props": "warn",
          "jsx-a11y/aria-proptypes": "warn",
          "jsx-a11y/aria-unsupported-elements": "warn",
          "jsx-a11y/role-has-required-aria-props": "warn",
          "jsx-a11y/role-supports-aria-props": "warn",
          "nextjs/google-font-display": "warn",
          "nextjs/google-font-preconnect": "warn",
          "nextjs/inline-script-id": "error",
          "nextjs/next-script-for-ga": "warn",
          "nextjs/no-assign-module-variable": "error",
          "nextjs/no-async-client-component": "warn",
          "nextjs/no-before-interactive-script-outside-document": "warn",
          "nextjs/no-css-tags": "warn",
          "nextjs/no-document-import-in-page": "error",
          "nextjs/no-duplicate-head": "error",
          "nextjs/no-head-element": "warn",
          "nextjs/no-head-import-in-document": "error",
          "nextjs/no-html-link-for-pages": "warn",
          "nextjs/no-img-element": "warn",
          "nextjs/no-page-custom-font": "warn",
          "nextjs/no-script-component-in-head": "error",
          "nextjs/no-styled-jsx-in-document": "warn",
          "nextjs/no-sync-scripts": "warn",
          "nextjs/no-title-in-document-head": "warn",
          "nextjs/no-typos": "warn",
          "nextjs/no-unwanted-polyfillio": "warn",
          "react/display-name": "error",
          "react/exhaustive-deps": "warn",
          "react/jsx-key": "error",
          "react/jsx-no-comment-textnodes": "error",
          "react/jsx-no-duplicate-props": "error",
          "react/jsx-no-target-blank": "off",
          "react/jsx-no-undef": "error",
          "react/no-children-prop": "error",
          "react/no-danger-with-children": "error",
          "react/no-direct-mutation-state": "error",
          "react/no-find-dom-node": "error",
          "react/no-is-mounted": "error",
          "react/no-render-return-value": "error",
          "react/no-string-refs": "error",
          "react/no-unescaped-entities": "error",
          "react/no-unknown-property": "off",
          "react/no-unsafe": "off",
          "react/react-in-jsx-scope": "off",
          "react/rules-of-hooks": "error",
        },
      },
    ],
    "plugins": [],
  },
  "skipped": {
    "js-plugins": [],
    "not-implemented": [
      "react/no-deprecated",
      "node/prefer-global/process",
    ],
    "nursery": [
      "react/require-render-return",
    ],
    "type-aware": [],
    "unsupported": [
      "react/jsx-uses-react",
      "react/jsx-uses-vars",
      "react-hooks/static-components",
      "react-hooks/use-memo",
      "react-hooks/preserve-manual-memoization",
      "react-hooks/incompatible-library",
      "react-hooks/immutability",
      "react-hooks/globals",
      "react-hooks/refs",
      "react-hooks/set-state-in-effect",
      "react-hooks/error-boundaries",
      "react-hooks/purity",
      "react-hooks/set-state-in-render",
      "react-hooks/unsupported-syntax",
      "react-hooks/config",
      "react-hooks/gating",
    ],
  },
  "warnings": [
    "special parser detected: eslint-config-next/parser",
    "Settings found under a 'files' pattern — oxlint does not support settings in overrides and they will be skipped:
\`react\`
\`import/parsers\`
\`import/resolver\`",
  ],
}
`;

exports[`next-eslint-config-project --js-plugins > next-eslint-config-project--js-plugins 1`] = `
{
  "config": {
    "$schema": "./node_modules/oxlint/configuration_schema.json",
    "categories": {
      "correctness": "off",
    },
    "env": {
      "builtin": true,
    },
    "ignorePatterns": [
      ".next/**",
      "out/**",
      "build/**",
      "next-env.d.ts",
    ],
    "overrides": [
      {
        "env": {
          "browser": true,
          "node": true,
        },
        "files": [
          "**/*.{js,jsx,mjs,ts,tsx,mts,cts}",
        ],
        "globals": {
          "AudioWorkletGlobalScope": "readonly",
          "AudioWorkletProcessor": "readonly",
          "WorkletGlobalScope": "readonly",
          "currentFrame": "readonly",
          "currentTime": "readonly",
          "registerProcessor": "readonly",
          "sampleRate": "readonly",
        },
        "plugins": [
          "react",
          "nextjs",
          "import",
          "jsx-a11y",
        ],
        "rules": {
          "import/no-anonymous-default-export": "warn",
          "jsx-a11y/alt-text": [
            "warn",
            {
              "elements": [
                "img",
              ],
              "img": [
                "Image",
              ],
            },
          ],
          "jsx-a11y/aria-props": "warn",
          "jsx-a11y/aria-proptypes": "warn",
          "jsx-a11y/aria-unsupported-elements": "warn",
          "jsx-a11y/role-has-required-aria-props": "warn",
          "jsx-a11y/role-supports-aria-props": "warn",
          "nextjs/google-font-display": "warn",
          "nextjs/google-font-preconnect": "warn",
          "nextjs/inline-script-id": "error",
          "nextjs/next-script-for-ga": "warn",
          "nextjs/no-assign-module-variable": "error",
          "nextjs/no-async-client-component": "warn",
          "nextjs/no-before-interactive-script-outside-document": "warn",
          "nextjs/no-css-tags": "warn",
          "nextjs/no-document-import-in-page": "error",
          "nextjs/no-duplicate-head": "error",
          "nextjs/no-head-element": "warn",
          "nextjs/no-head-import-in-document": "error",
          "nextjs/no-html-link-for-pages": "warn",
          "nextjs/no-img-element": "warn",
          "nextjs/no-page-custom-font": "warn",
          "nextjs/no-script-component-in-head": "error",
          "nextjs/no-styled-jsx-in-document": "warn",
          "nextjs/no-sync-scripts": "warn",
          "nextjs/no-title-in-document-head": "warn",
          "nextjs/no-typos": "warn",
          "nextjs/no-unwanted-polyfillio": "warn",
          "react/display-name": "error",
          "react/exhaustive-deps": "warn",
          "react/jsx-key": "error",
          "react/jsx-no-comment-textnodes": "error",
          "react/jsx-no-duplicate-props": "error",
          "react/jsx-no-target-blank": "off",
          "react/jsx-no-undef": "error",
          "react/no-children-prop": "error",
          "react/no-danger-with-children": "error",
          "react/no-direct-mutation-state": "error",
          "react/no-find-dom-node": "error",
          "react/no-is-mounted": "error",
          "react/no-render-return-value": "error",
          "react/no-string-refs": "error",
          "react/no-unescaped-entities": "error",
          "react/no-unknown-property": "off",
          "react/no-unsafe": "off",
          "react/react-in-jsx-scope": "off",
          "react/rules-of-hooks": "error",
        },
      },
    ],
    "plugins": [],
  },
  "skipped": {
    "js-plugins": [],
    "not-implemented": [
      "react/no-deprecated",
      "node/prefer-global/process",
    ],
    "nursery": [
      "react/require-render-return",
    ],
    "type-aware": [],
    "unsupported": [
      "react/jsx-uses-react",
      "react/jsx-uses-vars",
      "react-hooks/static-components",
      "react-hooks/use-memo",
      "react-hooks/preserve-manual-memoization",
      "react-hooks/incompatible-library",
      "react-hooks/immutability",
      "react-hooks/globals",
      "react-hooks/refs",
      "react-hooks/set-state-in-effect",
      "react-hooks/error-boundaries",
      "react-hooks/purity",
      "react-hooks/set-state-in-render",
      "react-hooks/unsupported-syntax",
      "react-hooks/config",
      "react-hooks/gating",
    ],
  },
  "warnings": [
    "special parser detected: eslint-config-next/parser",
    "Settings found under a 'files' pattern — oxlint does not support settings in overrides and they will be skipped:
\`react\`
\`import/parsers\`
\`import/resolver\`",
  ],
}
`;

exports[`next-eslint-config-project --type-aware > next-eslint-config-project--type-aware 1`] = `
{
  "config": {
    "$schema": "./node_modules/oxlint/configuration_schema.json",
    "categories": {
      "correctness": "off",
    },
    "env": {
      "builtin": true,
    },
    "ignorePatterns": [
      ".next/**",
      "out/**",
      "build/**",
      "next-env.d.ts",
    ],
    "overrides": [
      {
        "env": {
          "browser": true,
          "node": true,
        },
        "files": [
          "**/*.{js,jsx,mjs,ts,tsx,mts,cts}",
        ],
        "globals": {
          "AudioWorkletGlobalScope": "readonly",
          "AudioWorkletProcessor": "readonly",
          "WorkletGlobalScope": "readonly",
          "currentFrame": "readonly",
          "currentTime": "readonly",
          "registerProcessor": "readonly",
          "sampleRate": "readonly",
        },
        "plugins": [
          "react",
          "nextjs",
          "import",
          "jsx-a11y",
        ],
        "rules": {
          "import/no-anonymous-default-export": "warn",
          "jsx-a11y/alt-text": [
            "warn",
            {
              "elements": [
                "img",
              ],
              "img": [
                "Image",
              ],
            },
          ],
          "jsx-a11y/aria-props": "warn",
          "jsx-a11y/aria-proptypes": "warn",
          "jsx-a11y/aria-unsupported-elements": "warn",
          "jsx-a11y/role-has-required-aria-props": "warn",
          "jsx-a11y/role-supports-aria-props": "warn",
          "nextjs/google-font-display": "warn",
          "nextjs/google-font-preconnect": "warn",
          "nextjs/inline-script-id": "error",
          "nextjs/next-script-for-ga": "warn",
          "nextjs/no-assign-module-variable": "error",
          "nextjs/no-async-client-component": "warn",
          "nextjs/no-before-interactive-script-outside-document": "warn",
          "nextjs/no-css-tags": "warn",
          "nextjs/no-document-import-in-page": "error",
          "nextjs/no-duplicate-head": "error",
          "nextjs/no-head-element": "warn",
          "nextjs/no-head-import-in-document": "error",
          "nextjs/no-html-link-for-pages": "warn",
          "nextjs/no-img-element": "warn",
          "nextjs/no-page-custom-font": "warn",
          "nextjs/no-script-component-in-head": "error",
          "nextjs/no-styled-jsx-in-document": "warn",
          "nextjs/no-sync-scripts": "warn",
          "nextjs/no-title-in-document-head": "warn",
          "nextjs/no-typos": "warn",
          "nextjs/no-unwanted-polyfillio": "warn",
          "react/display-name": "error",
          "react/exhaustive-deps": "warn",
          "react/jsx-key": "error",
          "react/jsx-no-comment-textnodes": "error",
          "react/jsx-no-duplicate-props": "error",
          "react/jsx-no-target-blank": "off",
          "react/jsx-no-undef": "error",
          "react/no-children-prop": "error",
          "react/no-danger-with-children": "error",
          "react/no-direct-mutation-state": "error",
          "react/no-find-dom-node": "error",
          "react/no-is-mounted": "error",
          "react/no-render-return-value": "error",
          "react/no-string-refs": "error",
          "react/no-unescaped-entities": "error",
          "react/no-unknown-property": "off",
          "react/no-unsafe": "off",
          "react/react-in-jsx-scope": "off",
          "react/rules-of-hooks": "error",
        },
      },
    ],
    "plugins": [],
  },
  "skipped": {
    "js-plugins": [],
    "not-implemented": [
      "react/no-deprecated",
      "node/prefer-global/process",
    ],
    "nursery": [
      "react/require-render-return",
    ],
    "type-aware": [],
    "unsupported": [
      "react/jsx-uses-react",
      "react/jsx-uses-vars",
      "react-hooks/static-components",
      "react-hooks/use-memo",
      "react-hooks/preserve-manual-memoization",
      "react-hooks/incompatible-library",
      "react-hooks/immutability",
      "react-hooks/globals",
      "react-hooks/refs",
      "react-hooks/set-state-in-effect",
      "react-hooks/error-boundaries",
      "react-hooks/purity",
      "react-hooks/set-state-in-render",
      "react-hooks/unsupported-syntax",
      "react-hooks/config",
      "react-hooks/gating",
    ],
  },
  "warnings": [
    "special parser detected: eslint-config-next/parser",
    "Settings found under a 'files' pattern — oxlint does not support settings in overrides and they will be skipped:
\`react\`
\`import/parsers\`
\`import/resolver\`",
  ],
}
`;

exports[`next-eslint-config-project merge > next-eslint-config-project--merge 1`] = `
{
  "config": {
    "$schema": "./node_modules/oxlint/configuration_schema.json",
    "categories": {
      "correctness": "error",
      "perf": "error",
    },
    "env": {
      "builtin": true,
    },
    "ignorePatterns": [
      ".next/**",
      "out/**",
      "build/**",
      "next-env.d.ts",
    ],
    "overrides": [
      {
        "env": {
          "browser": true,
          "node": true,
        },
        "files": [
          "**/*.{js,jsx,mjs,ts,tsx,mts,cts}",
        ],
        "globals": {
          "AudioWorkletGlobalScope": "readonly",
          "AudioWorkletProcessor": "readonly",
          "WorkletGlobalScope": "readonly",
          "currentFrame": "readonly",
          "currentTime": "readonly",
          "registerProcessor": "readonly",
          "sampleRate": "readonly",
        },
        "plugins": [
          "react",
          "nextjs",
          "import",
          "jsx-a11y",
        ],
        "rules": {
          "import/no-anonymous-default-export": "warn",
          "jsx-a11y/alt-text": [
            "warn",
            {
              "elements": [
                "img",
              ],
              "img": [
                "Image",
              ],
            },
          ],
          "jsx-a11y/aria-props": "warn",
          "jsx-a11y/aria-proptypes": "warn",
          "jsx-a11y/aria-unsupported-elements": "warn",
          "jsx-a11y/role-has-required-aria-props": "warn",
          "jsx-a11y/role-supports-aria-props": "warn",
          "nextjs/google-font-display": "warn",
          "nextjs/google-font-preconnect": "warn",
          "nextjs/inline-script-id": "error",
          "nextjs/next-script-for-ga": "warn",
          "nextjs/no-assign-module-variable": "error",
          "nextjs/no-async-client-component": "warn",
          "nextjs/no-before-interactive-script-outside-document": "warn",
          "nextjs/no-css-tags": "warn",
          "nextjs/no-document-import-in-page": "error",
          "nextjs/no-duplicate-head": "error",
          "nextjs/no-head-element": "warn",
          "nextjs/no-head-import-in-document": "error",
          "nextjs/no-html-link-for-pages": "warn",
          "nextjs/no-img-element": "warn",
          "nextjs/no-page-custom-font": "warn",
          "nextjs/no-script-component-in-head": "error",
          "nextjs/no-styled-jsx-in-document": "warn",
          "nextjs/no-sync-scripts": "warn",
          "nextjs/no-title-in-document-head": "warn",
          "nextjs/no-typos": "warn",
          "nextjs/no-unwanted-polyfillio": "warn",
          "react/display-name": "error",
          "react/exhaustive-deps": "warn",
          "react/jsx-key": "error",
          "react/jsx-no-comment-textnodes": "error",
          "react/jsx-no-duplicate-props": "error",
          "react/jsx-no-target-blank": "off",
          "react/jsx-no-undef": "error",
          "react/no-children-prop": "error",
          "react/no-danger-with-children": "error",
          "react/no-direct-mutation-state": "error",
          "react/no-find-dom-node": "error",
          "react/no-is-mounted": "error",
          "react/no-render-return-value": "error",
          "react/no-string-refs": "error",
          "react/no-unescaped-entities": "error",
          "react/no-unknown-property": "off",
          "react/no-unsafe": "off",
          "react/react-in-jsx-scope": "off",
          "react/rules-of-hooks": "error",
        },
      },
    ],
    "plugins": [],
  },
  "skipped": {
    "js-plugins": [],
    "not-implemented": [
      "react/no-deprecated",
      "node/prefer-global/process",
    ],
    "nursery": [
      "react/require-render-return",
    ],
    "type-aware": [],
    "unsupported": [
      "react/jsx-uses-react",
      "react/jsx-uses-vars",
      "react-hooks/static-components",
      "react-hooks/use-memo",
      "react-hooks/preserve-manual-memoization",
      "react-hooks/incompatible-library",
      "react-hooks/immutability",
      "react-hooks/globals",
      "react-hooks/refs",
      "react-hooks/set-state-in-effect",
      "react-hooks/error-boundaries",
      "react-hooks/purity",
      "react-hooks/set-state-in-render",
      "react-hooks/unsupported-syntax",
      "react-hooks/config",
      "react-hooks/gating",
    ],
  },
  "warnings": [
    "special parser detected: eslint-config-next/parser",
    "Settings found under a 'files' pattern — oxlint does not support settings in overrides and they will be skipped:
\`react\`
\`import/parsers\`
\`import/resolver\`",
  ],
}
`;
